--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,11 +1,14 @@
   <form method="get" action="/quizes/">
-	Search: <input type="text" name="search" value="<% search %>" />
+	Buscar: <input type="text" name="search" value="<% search %>" />
 	<input type="submit" value="Submit" />
 </form>
 <table>
   <% var i; for (i=0; i < quizes.length; i++) { %>        
-     <tr><td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td></tr> 
+    <tr>
+      <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
+      <td><a href="quizes/<%= quizes[i].id %>/edit"><button>editar</button></a></td>
+    </tr> 
   <% } %>
-  </table>
-<p>
-<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+</table>
+<p/>
+<a href="/quizes/new"><button>Crear pregunta</button></a>
