--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -7,3 +7,10 @@
 </form>
 <br>
 <a href="/quizes">Volver</a>
+
+<p><a href="/quizes/<%= quiz.id %>/comments/new"><button>Nuevo comentario</button></a></p>
+
+<p><strong>Comentarios:</strong></p>
+<%for(index in quiz.Comments){%>
+	<p>- <%=quiz.Comments[index].texto%></p>
+<%}%>
