--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -12,3 +12,4 @@ nav span             { margin: 0px 10px 0px 0px;}
 .letraTema	     { color: violet;}
 
 #ErrorMsgs           { color: #f61; font-size: smaller}
+.right 				 {float: right;}
